[NR-24610] fix: tighten up functional test memory usage
Still getting OOM conditions when running tests on JDK 17